# libactor

./: CMakeLists.txt  README.md
.github/workflows/: compilation.yaml
cmake/: version.in.h
experiments/: CMakeLists.txt
experiments/01_queue_messages/: CMakeLists.txt  main.cpp
experiments/02_generate_call_functions/: CMakeLists.txt  main.cpp
experiments/03_process_message_queue/: CMakeLists.txt  main.cpp  traits.h
experiments/04_api_oop/: CMakeLists.txt  main.cpp
experiments/05_api_dynamic/: CMakeLists.txt  envelope.h  main.cpp
